# platformrs

./: .gitignore  Cargo.toml  README.md
assets/: map.map  tiles.json
src/: assets.rs  camera.rs  collision_system.rs  config.rs  drawable.rs  entity.rs  error.rs  game.rs  input.rs  lib.rs  map.rs  object.rs  rect.rs
