[package]
name = "platformrs"
version = "0.1.0"
authors = ["Dan Cardin <ddcardin@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
coffee = { version = ">=0.3.1", features = ["metal"] }
serde = {version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
nalgebra = ">=0.18"
rayon = "*"
derive_more = "0.13.0"
itertools = ">=0.8"
uuid = { version = "0.7", features = ["v4"] }

[features]
debug = ["coffee/debug"]
